--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ margin-left: 68%;
   margin-left: 39%;
 }
 .cajafiesta{
-  margin-top: -180%;
+  margin-top: -530%;
 }
 
 .mariposa1{
@@ -99,9 +99,9 @@ margin-left: 68%;
    }
 
    .mariposados{
-    width: 15%;
+    width: 12%;
     margin-top: -52%;
-    margin-left: 61%;
+    margin-left: 75%;
      }
 
 .fondo{
@@ -121,11 +121,7 @@ margin-left: 68%;
        color: #166d4a;
        margin-top: -1%;  
   }
-  .venis{
-    width: 10%;
-    margin-top: 1%;
-    margin-left: 44%;
-  }
+ 
   .linea{
     color: #a0a0a0;
     width: 70%;
@@ -136,40 +132,53 @@ margin-left: 68%;
     font-family: 'Dancing Script', cursive; 
        font-size: 28px;
        color: #5c5c5c;
-       line-height: 30px;
+
        margin-top: 10%;
-  
+       line-height: 2em;
   }
+
   .parrafo3{
     text-align: center; 
-    font-family: "Bad Script", cursiva; 
-       font-size: 38px;
-       color: #a992c0;
+    font-family: "Corinthia", cursive;
+       font-size: 45px;
+       color: #166d4a;
        margin-top: 8%;  
   }
   .parrafo4{
     text-align: center;
-    font-family: "Bad Script", cursiva; 
+    font-family: 'Dancing Script', cursive; 
        font-size: 28px;
        color: #5c5c5c;
        line-height: 30px;
-       margin-top: 8%;
+       margin-top: 10%;   
+        line-height: 2em;
+
   }
-  .parrafo8{
+
+  .percha{
+    width: 18%;
+    margin-top: 2%;
+    margin-left: 43%;
+
+  }
+
+  .parrafo5{
     text-align: center; 
-    font-family:'Amatic SC', cursive;
-       font-size: 38px;
-       color: #a992c0;
-       margin-top: 20%;  
+    font-family: "Corinthia", cursive;
+       font-size: 45px;
+       color: #166d4a;
+       margin-top: 15%;  
+
   }
+
   .parrafo6{
     text-align: center;
-    font-family: "Bad Script", cursiva; 
+    font-family: 'Dancing Script', cursive; 
        font-size: 28px;
        color: #5c5c5c;
        line-height: 30px;
        margin-top: 5%;
-  
+       line-height: 2em;
   }
 
   .parrafo9{
@@ -192,13 +201,6 @@ margin-left: 68%;
   
   }
 
-  .parrafo5{
-    text-align: center; 
-    font-family:'Amatic SC', cursive;
-       font-size: 38px;
-       color: #a992c0;
-       margin-top: 10%;  
-  }
   .lape{
     width: 23%;
     margin-left: 38%;
