--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ margin-left: 68%;
   margin-left: 39%;
 }
 .cajafiesta{
-  margin-top: -530%;
+  margin-top: -710%;
 }
 
 .mariposa1{
@@ -228,7 +228,13 @@ margin-left: 68%;
   }
 
 
-
+.parrafo10{
+  text-align: center; 
+  font-family: "Corinthia", cursive;
+     font-size: 45px;
+     color: #3f4040;
+     margin-top: 35%;  
+}
 
 
 
@@ -237,21 +243,16 @@ margin-left: 68%;
 
   
 
-  .lape{
-    width: 23%;
-    margin-left: 38%;
-    margin-top: -5%;
-  }
    
 .presentacion{
   width: 90%;
   margin-left: 5%;
   margin-top: 10%;
 }
-.final{
-  width: 90%;
-  margin-left: 5%;
-  margin-top: 10%;
+.mica{
+  width: 45%;
+  margin-left: 27%;
+  margin-top: -8%;
 }
 .carousel-inner img{
   width: 90%;
@@ -441,9 +442,9 @@ margin-left: 68%;
  } 
 
  .gif{
-  width: 50%;
- margin-left:18%;
- margin-top: -50%;
+  width: 30%;
+ margin-left:35%;
+ margin-top: -10%;
  }
 .whatsap{
   width: 18%;
@@ -452,12 +453,7 @@ margin-left: 68%;
   
 }
 
-.sofia{
-  width: 35%;
- margin-left: 2%;
- margin-top: -45%;
-  
-}
+
 
 
 
@@ -475,7 +471,7 @@ margin-top: -20%;
 }
 
 .box__copyright{
-  margin-top: 32%;
+  margin-top: 125%;
 }
 
 
@@ -603,20 +599,6 @@ margin-left: 43%;
      margin-top: 5%;  
 }
 
-.linea{
-  color:#212121;
-  width: 70%;
- margin-left: 15%;
-}
-.parrafo2{
-  text-align: center;
-  font-family: 'Julius Sans One', sans-serif;
-     font-size: 25px;
-     color: #5c5c5c;
-     line-height: 30px;
-     margin-top: 5%;
-
-}
 
 .css-button-arrow--sand {
   padding: 2px 9px;
@@ -634,93 +616,14 @@ margin-left: 43%;
   
 }
 
-.linea2{
-  color:#212121;
-  width: 70%;
- margin-left: 15%;
- margin-top: 8%;
-}
-
-.parrafo3{
-  text-align: center;
-  font-family: 'Julius Sans One', sans-serif;
-     font-size: 30px;
-     color: #888888;
-     margin-top: 5%;  
-     margin-top: 15%;
-}
-
-.click_2 {
-  padding: 4px 9px;
-  font-size: 25px;
-  border: none;
-  color: rgb(255, 255, 255);
-  background-color: #292929;
-  border-radius: 7px;
-  box-shadow: 2px 2px 30px -5px rgb(170, 170, 170);
-  cursor: pointer;
-  background-size: 50%;
-  font-family: 'Julius Sans One', sans-serif;
-  text-decoration: none;
-  
-}
-.boton2 {
-  text-align: center;
- margin-top: 8%;
-}
-.parrafo4{
-  text-align: center;
-  font-family: 'Julius Sans One', sans-serif;
-     font-size: 30px;
-     color: #888888;  
-     margin-top: 15%;
-}
 
 
-.boton3{
-  padding: 4px 9px;
-  font-size: 25px;
-  font-weight: 1200;
-  border: none;
-  color: rgb(255, 255, 255);
-  background-color: #292929;
-  border-radius: 7px;
-  box-shadow: 2px 2px 30px -5px rgb(170, 170, 170);
-  cursor: pointer;
-  background-size: 50%;
-  font-family: 'Julius Sans One', sans-serif;
-  text-decoration: none;
-  margin-top: 8%;
-  
-}
-.contenedor-regalo{
-  text-align: center;
-}
-.contenedor-mapa{
-  display: flex;
-justify-content: center;
-align-items: center;
-}
 
-.linea3{
-  color:#212121;
-  width: 70%;
- margin-left: 15%;
- margin-top: 10%;
-}
 
-.linea4{
-  color:#212121;
-  width: 70%;
- margin-left: 15%;
- margin-top: 8%;
-}
-.center {
-  height: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+
+
+
+
 
 .wave {
   width: 1px;
@@ -783,25 +686,8 @@ align-items: center;
   }
 }
 
-.esperamos{
-text-align: center;
-font-family: 'Julius Sans One', sans-serif;
-   font-size: 30px;
-   color: #888888;  
-   margin-top: 20%;
-   
-} 
-.caricatura{
-  width: 25%;
-  margin-top: 5%;
- margin-left: 38%;
-}
-.nombres{
-width: 35%;
-margin-left:32%;
-margin-top: -15%;
 
-}
+
 
 
 
